--- a/cypress/e2e/testing-report/testing-summary.html
+++ b/cypress/e2e/testing-report/testing-summary.html
@@ -32,8 +32,30 @@
                     When the 3rd checkbox unchecked, all categories get checked.
                 </li>
             </ul>
-        <p>
+            Note:
+            <br>
+            - Add tests to the ```countdown-timer``` and ```filters``` specs for each spec's respective components/functionality. - DONE
+            <br>
+            - Add more general coverage to the ```content.cy.ts``` spec to which you feel is necessary. - DONE
+            <br>
+            - Commit any changes you make onto a new Git branch named ```test/firstname-lastname```, replacing ```firstname``` and ```lastname``` with your first and last names. - DONE
+            <br>
+            - Follow Conventional Commits guidelines for your commit message/s (see [the guidelines](https://www.conventionalcommits.org/) for more info). - DONE
+            <br>
+            - Once completed, push this Git repository onto a platform such as Github for our review. -DONE
+            <br>
+            - Please ensure that this repository is made public, and double check that your branch is present on the remote repository. - DONE
 
+            <br>
+            - Race response mocking. - YES, refer 'race-response.mock.cy.ts'
+            <br>
+            - Negative scenario testing (e.g. failed network requests). - YES, refer 'race-response.mock.cy.ts'
+            <br>
+            - Small summaries of any bugs/issues you witness whilst implementing your solution. - YES, refer this html report.
+        <p>
+        <p>
+            Thank you. I have enjoyed this Cypress task and hope to grow with the team. - Yue
+        </p>
     </div>
 </body>
 </html>
